syntax = "proto3";

package raw;

option go_package = "github.com/maxogod/distro-tp/src/common/models/raw";


message TransactionItem {
    int64 item_id = 1;
    int32 quantity = 2;
    double subtotal = 3;
    string created_at = 4;
}

message TransactionItemsBatch {
    repeated TransactionItem transaction_items = 1;
}